fix: resolve string format exception in sendSalaryOtpEmail caused by literal CSS percentage signs